--- a/main.html
+++ b/main.html
@@ -5,7 +5,11 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
+	<ol>
+		<li>
+			shoppingList
+		</li>
+	</ol>
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
