--- a/main.html
+++ b/main.html
@@ -10,6 +10,17 @@
 			shoppingList
 		</li>
 	</ol>
+	<ul>
+		<li>
+			Kashmir
+		</li>
+		<li>
+			Goa
+		</li>
+		<li>
+			Mussoorie
+		</li>
+	</ul>
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
