--- a/main.html
+++ b/main.html
@@ -6,9 +6,9 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 	<ol>
-		<li>
-			shoppingList
-		</li>
+		<li data-ns-test="shoppingList">Laptop</li>
+		<li data-ns-test="shoppingList">Smartphone</li>
+		<li data-ns-test="shoppingList">Watch</li>
 	</ol>
 	<ul>
 		<li>
