--- a/main.html
+++ b/main.html
@@ -5,6 +5,7 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
+	<h2>My Shopping List:</h2>
 	<ol>
 		<li data-ns-test="shoppingList">Laptop</li>
 		<li data-ns-test="shoppingList">Smartphone</li>
