--- a/main.html
+++ b/main.html
@@ -11,16 +11,11 @@
 		<li data-ns-test="shoppingList">Smartphone</li>
 		<li data-ns-test="shoppingList">Watch</li>
 	</ol>
+	<h2>My Dream Holiday Destinations:</h2>
 	<ul>
-		<li>
-			Kashmir
-		</li>
-		<li>
-			Goa
-		</li>
-		<li>
-			Mussoorie
-		</li>
+		<li data-ns-test="holidayList">Tokyo, Japan</li>
+		<li data-ns-test="holidayList">Goa, India</li>
+		<li data-ns-test="holidayList">Mussoorie, India</li>
 	</ul>
 <body>
 	<!-- the entire body must be written by student -->
