--- a/main.html
+++ b/main.html
@@ -9,13 +9,13 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	
+	<h2>My Shopping List:</h2>
 	<ol>
 		<li data-ns-test="shoppingList">Laptop</li>
 		<li data-ns-test="shoppingList">Smartphone</li>
 		<li data-ns-test="shoppingList">Watch</li>
 	</ol>
-	
+	<h2>My Dream Holiday Destinations:</h2>
 	<ul>
 		<li data-ns-test="holidayList">Tokyo, Japan</li>
 		<li data-ns-test="holidayList">Goa, India</li>
